# lulu-logs

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  SUGGESTIONS.md  lulu-logs-specs.md  rerun_gap.md
.github/: copilot-instructions.md
.github/skills/lulu-logs-client/: SKILL.md
.vibe/skills/org-repo/: SKILL.md
app/: Cargo.toml  Dioxus.toml  build.rs  specs.md
app/assets/: style.css
app/src/: app.rs  main.rs
app/src/components/: lens_view.rs  log_item.rs  log_list.rs  mod.rs  pulse_panel.rs  scenario_panel.rs  sidebar.rs  status_bar.rs  toolbar.rs
app/src/models/: lens_pin.rs  lulu_log_entry.rs  mod.rs  pulse_source.rs  span.rs  test_scenario.rs
app/src/mqtt/: broker.rs  client.rs  config.rs  mod.rs  rand.rs
benchmark/: .gitignore  Cargo.toml  README.md  build.rs  generate_protobuf.sh
benchmark/benches/: serialization_bench.rs
benchmark/flatbuffers/: lulu_logs.fbs
benchmark/protobuf/: lulu_logs.proto
benchmark/src/: flatbuffers.rs  lib.rs  protobuf.rs
examples/v2_streamable/: Cargo.toml
examples/v2_streamable/src/: main.rs
justifications/: why_flatbuffer.md  why_mqtt.md  why_record_length_separator.md  why_streamable_unified.md  why_u32_length.md  why_u64_timestamp.md
rust-client/: Cargo.toml  user-manual.md
rust-client/src/: client.rs  error.rs  lib.rs  lulu_logs_generated.rs  models.rs  publisher.rs  terminal_logger.rs  topic.rs
schema/: lulu_export.fbs  lulu_export_v2.fbs  lulu_logs.fbs  lulu_logs_v2.fbs
specs/: lulu-logs.md
