[package]
name = "lulu-logs-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop log viewer for the lulu-logs MQTT protocol"

[dependencies]
anyhow = "1.0"
bytes = "1.11.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.17"
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
flatbuffers = "24.3.25"
rand = "0.8.5"
rumqttc = "0.25.0"
rumqttd = { git = "https://github.com/Panduza/rumqtt", tag = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
